<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/dog_avatar_holder"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:background="@drawable/circular_image_view"
            android:contentDescription="@string/dog_avatar"
            android:padding="10dp"
            android:src="@drawable/ic_dog_avatar"
            app:layout_anchor="@id/login_card_holder"
            app:layout_anchorGravity="top|center" />

        <android.support.v7.widget.CardView
            android:id="@+id/login_card_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="95dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/login_card_holder"
                android:layout_alignStart="@+id/login_card_holder"
                android:layout_alignTop="@+id/login_card_holder">

                <TextView
                    android:id="@+id/signin_dog_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:text="@string/buzz_buzz_nin_case_of_contact"
                    android:textColor="@color/material_blue"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <com.vsapp.petcare.Utils.OTP
                    android:id="@+id/otp_holder"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signin_dog_language"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    app:borderColor="@color/material_blue"
                    app:borderWidth="2dp"
                    app:itemCount="6"
                    app:itemHeight="40dp"
                    app:itemSpacing="5dp"
                    app:itemWidth="40dp"
                    app:viewType="rectangle" />

                <TextView
                    android:id="@+id/code_sent_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/otp_holder"
                    android:layout_alignStart="@id/otp_holder"
                    android:layout_below="@id/otp_holder"
                    android:layout_marginTop="15dp"
                    android:text="@string/code_sent_to"
                    android:textColor="@color/material_blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/resend_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/code_sent_text"
                    android:layout_alignStart="@+id/code_sent_text"
                    android:layout_below="@+id/code_sent_text"
                    android:layout_marginTop="10dp"
                    android:text="@string/resend_in"
                    android:textColor="@color/material_blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/otp_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/resend_timer"
                    android:layout_alignStart="@+id/resend_timer"
                    android:layout_below="@id/resend_timer"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/material_blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/otp_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/otp_status"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/signin_button_background"
                    android:paddingBottom="15dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="15dp"
                    android:text="@string/resend"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>