<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:folding-cell="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dog"
            type="com.vsapp.petcare.datamodels.DogList" />
        <variable
            name="img"
            type="com.vsapp.petcare.datamodels.DogList"/>
    </data>

    <com.ramotion.foldingcell.FoldingCell
        android:id="@+id/dog_folding_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        folding-cell:animationDuration="500"
        folding-cell:cameraHeight="30">

        <FrameLayout
            android:id="@+id/content_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/dog_icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/dog_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="35dp"
                        android:layout_toEndOf="@id/dog_icon"
                        android:layout_toRightOf="@id/dog_icon"
                        android:maxLines="2"
                        android:text="@{dog.dogName}"
                        android:textColor="@color/material_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/dog_details_divider"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@id/dog_icon"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/material_blue" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dog_details_divider"
                        android:orientation="horizontal"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/signin_button_background"
                            android:text="@string/info"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:id="@+id/information"/>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/signin_button_background"
                            android:text="@string/diet"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/dog_image"
                        android:id="@+id/image2"
                       />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="35dp"
                        android:maxLines="2"
                        android:text="@{dog.dogName}"
                        android:textColor="@color/material_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </FrameLayout>

    </com.ramotion.foldingcell.FoldingCell>
</layout>